--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
  JWT_Secret = 6790PON67
- MONGO_URL = mongodb://localhost:27017
+ MONGO_URL = mongodb+srv://ayush:4Q4w9H2qFxVRN0tt@cluster0.17llnnm.mongodb.net/test
